# shadcn-admin-cli

./: .env  .env.example  .gitignore  .prettierrc  CLAUDE.md  README.md  eslint.config.js  gemini-conversation-1764586765869.json  index.html  package.json  pyproject.toml  tsconfig.json  tsconfig.node.json  tsr.config.json  vite.config.ts
.claude/: .gitignore  CLAUDE.md  README.md  settings.json  settings.local.json
.claude/agents/: task-breakdown.md
.claude/commands/: build.js  dev.js
.claude/hooks/: post-build.js  post-command.js  pre-command.js  pre-commit.js  pre-format.js
.claude/scripts/: cleanup.js  dev-setup.js  quality-check.js
claude-agent/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: API_INTEGRATION_GUIDE.md  INTEGRATION_GUIDE.md  TANSTACK_ROUTER_CONFIG.md  TYPE_CHECKING.md
docs/公共Context功能解读/: 公共Context功能解读.md
docs/公共Hooks解读/: 公共Hooks解读.md
docs/公共Stores 解读/: 公共Stores解读.md
docs/公共布局LAYOUT解读/: 公共布局LAYOUT解读.md
docs/公用组件Data-Table解读/: Data-Table组件项目使用案例.md  公用组件Data-Table解读.md
docs/官方示例解读/: 官方示例解读.md
docs/项目技术文档/: TypeScript --noEmit 选项说明.md  代码格式化指南.md
mocker/mocker/: .env  README.md  mocker.db  pyproject.toml
mocker/mocker/.claude/: settings.local.json
mocker/mocker/src/: mocker.db
mocker/mocker/src/mocker/: database.py  main.py  mocker.db  models.py  run.py  schemas.py  seed.py  utils.py
mocker/mocker/src/mocker/routers/: __init__.py  auth.py  tasks.py  users.py
mocker/mocker/tests/: mock_user_data.py
src/: main.tsx  routeTree.gen.ts  tanstack-table.d.ts  vite-env.d.ts
(+446 files in other folders)
