[project]
name = "claude-agent"
version = "0.1.0"
description = "A Claude-powered coding agent for code review, security analysis, and development tasks"
authors = [
    {name = "Developer",email = "dev@example.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "claude-agent-sdk (>=0.1.18,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
